# katas

./: README.md
2016-05/: README.md
2016-05/brkattk/: README.md  mix.exs
2016-05/brkattk/config/: config.exs
2016-05/brkattk/lib/: hand.ex  poker.ex
2016-05/brkattk/test/: hand_test.exs  poker_test.exs
2016-05/cort/: README.md  coverage.html  index.js  package.json
2016-05/cort/lib/: card.js  deck.js  face.js  hand.js  index.js  main.js  player.js  rank.js  suit.js  table.js
2016-05/cort/test/: card.js  face.js  hand.js  index.js  main.js  player.js  suit.js  table.js
2016-05/cpp/: .gitignore  CMakeLists.txt  README.md
2016-05/cpp/src/: card.cpp  card.h  card_t.h  hand.cpp  hand.h  hand_t.cpp  hand_t.h  main.cpp
2016-05/js/test/: face.js
2016-05/rhowell/: README.md  mix.exs
2016-05/rhowell/config/: config.exs
2016-05/rhowell/lib/: hands.ex  match.ex
2016-05/rhowell/test/: hands_test.exs  match_test.exs
2016-06/: README.md
2016-10/: README.md
2017-05/: README.md
